name:                pic
version:             0.0.1.0
license:             BSD3
license-file:        LICENSE
author:              Brian Brooks
maintainer:          brooks.brian@gmail.com
category:            Compilers/Interpreters
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
        .gitignore
        examples/*.hs

library
  exposed-modules:
        Data.IntelHex
        PIC.MachInst
        PIC.LinkerScript.AST
        PIC.LinkerScript.Parser
        PIC.LinkerScript.Parser.Lex
        PIC.LinkerScript.Parser.Parse
        PIC.LinkerScript.Parser.Preprocess
        PIC.LinkerScript.Parser.Tokens

  build-tools:
        alex                 >= 3.1.3,
        happy                >= 1.19.4
  build-depends:
        array                >= 0.5.0.0,
        attoparsec           >= 0.12.1.0,
        base                 >= 4.7,
        bytestring           >= 0.10.4.0

  ghc-options: -Wall -fwarn-tabs -O2
  hs-source-dirs: src
  default-language: Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  build-depends:
        base,
        pic,
        test-framework       >= 0.2.0,
        test-framework-quickcheck2 >= 0.2.0,
        QuickCheck           >= 2,
        test-framework-hunit >= 0.2.0,
        HUnit                >= 1.2 && < 2
  ghc-options: -w -threaded -rtsopts
  hs-source-dirs: tests
  default-language: Haskell2010

test-suite hlint
  type: exitcode-stdio-1.0
  main-is: hlint.hs
  build-depends:
        base,
        hlint >= 1.7
  ghc-options: -w -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: tests
  default-language: Haskell2010
